# combinario

./: .env  .env.example  .gitignore  docker-compose.yml  dockerfile  index.html  license  readme  requirements  style.css
combinario/: app.py  config.py  pyproject.toml  seed.py  worker.py
combinario/dbmanager/: dbmanager.py  schemas.py  tables.py
combinario/models/: model.py
combinario/static/css/: style.css
combinario/static/js/: items.js  saver.js
combinario/templates/: index.html
